# GeoLocation

./: .gitignore  CMakeLists.txt  GeoCoordinateWatcher.cpp  GeoCoordinateWatcher.h  GeoStruct.h  LocationCallback.cpp  LocationCallback.h  README.md  json.hpp  main.cpp  util.cpp  util.h
